syntax = "proto3";

package resources.notifications;
option go_package = "github.com/galexrt/fivenet/gen/go/proto/resources/notifications;notifications";

import "resources/common/i18n.proto";
import "resources/timestamp/timestamp.proto";
import "resources/users/users.proto";
import "validate/validate.proto";

message Notification {
  uint64 id = 1; // @gotags: alias:"id"
  resources.timestamp.Timestamp created_at = 2; // @gotags: alias:"created_at"
  resources.timestamp.Timestamp read_at = 3; // @gotags: alias:"read_at"
  int32 user_id = 4; // @gotags: alias:"user_id"
  resources.common.TranslateItem title = 5; // @gotags: alias:"title"
  optional string type = 6 [(validate.rules).string.max_len = 128]; // @gotags: alias:"type"
  resources.common.TranslateItem content = 7; // @gotags: alias:"content"
  NOTIFICATION_CATEGORY category = 8 [(validate.rules).enum.defined_only = true]; // @gotags: alias:"category"
  optional Data data = 9; // @gotags: alias:"data"
}

enum NOTIFICATION_CATEGORY {
  GENERAL = 0;
  DOCUMENT = 1;
}

message Data {
  optional Link link = 1;
  optional resources.users.UserShort caused_by = 2;
}

message Link {
  string to = 1;
  optional string title = 2;
  optional bool external = 3;
}
